# public-omics-watchtower

./: .gitattributes  .gitignore  ARCHITECTURE.md  LICENSE  MILESTONES.md  Makefile  README.md  REPOSITORY_STRUCTURE.md  ROADMAP.md  environment.yml  pyproject.toml
.github/: labels.yml
.github/ISSUE_TEMPLATE/: analysis_job.yml  discovery_job.yml  download_job.yml  report_job.yml
.github/workflows/: ci.yml  discovery_schedule.yml  weekly_report.yml
config/: watchtower.yaml
config/ai/: prioritizer.yaml  reporter.yaml
config/nodes/: _template.yaml  oyster-mini-01.yaml  oyster-mini-02.yaml
config/pipelines/: rnaseq_salmon_deseq2.yaml
config/repositories/: geo.yaml  sra.yaml
config/scoring/: relevance.yaml
config/species/: crassostrea_gigas.yaml
deploy/docs/: node_setup.md
deploy/macos/: bootstrap.sh  install_worker.sh  uninstall.sh
docs/: architecture.md  configuration.md  operations.md  phase2_species.md  phase3_meta_analysis.md
pipelines/rnaseq/: main.nf  nextflow.config
references/crassostrea_gigas/: README.md  manifest.yaml
schemas/: issue_body.schema.json
schemas/sqlite/: 001_initial.sql
scripts/: setup_labels.sh
templates/reports/: study_report.md.j2  weekly_digest.md.j2
tests/fixtures/: geo_soft_samples.txt  mock_issue_body.yaml
tests/integration/: test_github_queue_mock.py
tests/unit/: test_config.py  test_db.py  test_discover_handler.py  test_discovery.py  test_geo_download.py  test_github_auth.py  test_queue.py  test_scoring.py  test_staging.py  test_weekly.py  (+1 more)
watchtower/: __init__.py  cli.py  housekeeping.py
(+51 files in other folders)
